err/pymacadmin.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyMacAdmin'...
Listing './lib/python3.5/site-packages/PyMacAdmin/SCUtilities'...
Listing './lib/python3.5/site-packages/PyMacAdmin/Security'...
Listing './lib/python3.5/site-packages/PyMacAdmin/crankd'...
Listing './lib/python3.5/site-packages/PyMacAdmin/crankd/handlers'...
Listing './lib/python3.5/site-packages/PyMacAdmin-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './sbin'...
Compiling './sbin/airport-update.py'...
***   File "./sbin/airport-update.py", line 34
    except RuntimeError, exc:
                       ^
SyntaxError: invalid syntax

Compiling './sbin/crankd.py'...
***   File "./sbin/crankd.py", line 149
    except (ImportError, AttributeError), exc:
                                        ^
SyntaxError: invalid syntax

Compiling './sbin/create-location.py'...
***   File "./sbin/create-location.py", line 115
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Compiling './sbin/delete-certificate.py'...
***   File "./sbin/delete-certificate.py", line 45
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Compiling './sbin/keychain-delete.py'...
***   File "./sbin/keychain-delete.py", line 45
    print "Removing %s" % item
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './sbin/proxy-setenv.py'...
***   File "./sbin/proxy-setenv.py", line 14
    print "export http_proxy=http://%s:%s/" % (proxies['HTTPProxy'], proxies['HTTPPort'])
                                          ^
SyntaxError: invalid syntax

Compiling './sbin/set-proxy.py'...
***   File "./sbin/set-proxy.py", line 52
    except gaierror, exc:
                   ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
